KYV-1404 added qr code configuration parameters for merchant
